--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="feature-icon">
                   <i class="fas fa-calendar-alt"></i>
                 </div>
-                <h3 class="feature-title">Event Calendar</h3>
+                <h3 class="feature-title"><a href="/components/eventcalendar.html" >EVENT CALENDER</a></h3>
                 <p class="feature-description">
                   Stay updated with all campus events, workshops, and activities happening around you.
                 </p>
@@ -91,7 +91,7 @@
                 <div class="feature-icon">
                   <i class="fas fa-briefcase"></i>
                 </div>
-                <h3 class="feature-title">Internship Portal</h3>
+                <h3 class="feature-title"><a href="/components/internship.html">Internship Portal</a></h3>
                 <p class="feature-description">
                   Discover internship opportunities curated specifically for our university students.
                 </p>
@@ -100,7 +100,7 @@
                 <div class="feature-icon">
                   <i class="fas fa-graduation-cap"></i>
                 </div>
-                <h3 class="feature-title">E-Learning Hub</h3>
+                <h3 class="feature-title"><a href="/components/E_learning.html">E-Learning Hub</a></h3>
                 <p class="feature-description">
                   Access exclusive educational resources, tutorials, and learning materials.
                 </p>
